--- a/styles/global.css
+++ b/styles/global.css
@@ -64,7 +64,7 @@ body {
   top: 5px;
   right: 5px;
   color: black;
-  /* width: 50px;
-  height: 10px; */
-  /* font-size: 5px; */
+  /* width: 50px; */
+  /* height: 10px; */
+  font-size: 5px;
 }
