--- a/styles/combatant.css
+++ b/styles/combatant.css
@@ -27,11 +27,12 @@
 
 .Combatant_character_crop {
   position: absolute;
-  bottom: 1px;
-  left: 3px;
-  width: 22px;
-  height: 12px;
-  overflow: hidden;
+  top: 7.5px;
+  left: 13px;
+  /* width: 22px; */
+  /* height: 12px; */
+  scale: 0.6;
+  /* overflow: hidden; */
 }
 .Combatant_character {
   display: block;
