--- a/styles/titleScreen.css
+++ b/styles/titleScreen.css
@@ -8,24 +8,37 @@
 }
 
 .TitleScreen_logo {
+  position: relative;
   display: block;
-  margin: 0 auto;
-  width: 128px;
-  /* height: 2rem; */
-  /* image-rendering: pixelated; */
+  margin: 0;
+  height: 80%;
+  top: 10%;
+  left: 10%;
 
-  transform: scale(2.5) translateY(40%);
+  @media (min-width: 1256px) {
+    position: static;
+    margin: 0 auto;
+    height: 50%;
+    transform: translate(5%, 10%);
+  }
 }
 
 .TitleScreen .KeyboardMenu {
-  position: relative;
+  position: absolute;
   width: 400px;
   margin: 0 auto;
   background: transparent;
   border: 0;
-
-  top: 45%;
   padding: 20px;
+  top: 35%;
+  left: 55%;
+
+  @media (min-width: 1256px) {
+    position: relative;
+    right: 0;
+    top: 0;
+    left: 0;
+  }
 }
 
 .TitleScreen button {
