--- a/styles/global.css
+++ b/styles/global.css
@@ -29,32 +29,19 @@ body {
 }
 
 .game-container {
-  /* position: relative; */
-  /* background: #9ae2ff; */
-  /* width: 352px; */
-  /* height: 198px; */
-  /* margin: 0 auto; */
-  /* border: 10px solid #fff; */
-
-  /* transform: scale(3) translateY(50%); */
-
   position: absolute;
-  /* margin: 0; */
-  /* transform: translateY(50%); */
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
   width: 100%;
-  /* height: 100%; */
-  max-width: 100%;
+  max-width: 1400px;
   max-height: 100%;
 }
 
 .game-container canvas {
   image-rendering: pixelated;
   width: 100%;
-  /* height: 100%; */
 }
 
 .treasure {
@@ -68,5 +55,27 @@ body {
   color: black;
   font-size: 5px;
 
+  transform: scale(3);
+}
+
+.escMenu {
+  position: absolute;
+  top: 20%;
+  right: 6%;
+  color: black;
+  font-size: 5px;
+  transform: scale(3);
+
+  /* @media (min-width: 768px) {
+    width: auto;
+  } */
+}
+
+.fullscreen {
+  position: absolute;
+  top: 12%;
+  right: 6%;
+  color: black;
+  font-size: 5px;
   transform: scale(3);
 }
