--- a/styles/keyboardMenu.css
+++ b/styles/keyboardMenu.css
@@ -27,6 +27,7 @@
   border: 1px solid #999999;
   background-color: #cccccc;
   color: #666666;
+  opacity: 0.5;
 }
 .KeyboardMenu .option {
   position: relative;
