--- a/styles/global.css
+++ b/styles/global.css
@@ -124,3 +124,48 @@ body {
   height: 50px;
   border-radius: 20px;
 }
+
+.fade-in-out-image {
+  /* animation: fadeIn 0.5s; */
+  /* -webkit-animation: fadeIn 0.5s; */
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    top: -30px;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+    top: -30px;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    top: -30px;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    top: -30px;
+  }
+}
