--- a/styles/global.css
+++ b/styles/global.css
@@ -87,42 +87,28 @@ body {
 .dullOut {
   opacity: 0.5;
 }
-
-.controllerUp {
+.controller {
   position: absolute;
   opacity: 0.5;
-  top: 60%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+}
+.controllerUp {
+  bottom: 25%;
   right: 15%;
-  width: 50px;
-  height: 50px;
-  border-radius: 20px;
 }
 .controllerRight {
-  position: absolute;
-  opacity: 0.5;
-  top: 65%;
-  right: 10%;
-  width: 50px;
-  height: 50px;
-  border-radius: 20px;
+  bottom: 15%;
+  right: 5%;
 }
 .controllerDown {
-  position: absolute;
-  opacity: 0.5;
-  top: 70%;
+  bottom: 5%;
   right: 15%;
-  width: 50px;
-  height: 50px;
-  border-radius: 20px;
 }
 .controllerLeft {
-  position: absolute;
-  opacity: 0.5;
-  top: 65%;
-  right: 20%;
-  width: 50px;
-  height: 50px;
-  border-radius: 20px;
+  bottom: 15%;
+  right: 25%;
 }
 
 .fade-in-out-image {
@@ -140,13 +126,13 @@ body {
   }
 }
 
-@-webkit-keyframes fadeIn {
+@keyframes fadeInController {
   0% {
     opacity: 0;
-    top: -30px;
+    bottom: 30px;
   }
   100% {
-    opacity: 1;
+    opacity: 0.5;
   }
 }
 
@@ -160,12 +146,12 @@ body {
   }
 }
 
-@-webkit-keyframes fadeOut {
+@keyframes fadeOutController {
   0% {
-    opacity: 1;
+    opacity: 0.5;
   }
   100% {
     opacity: 0;
-    top: -30px;
+    bottom: 30px;
   }
 }
