--- a/styles/global.css
+++ b/styles/global.css
@@ -96,19 +96,23 @@ body {
 }
 .controllerUp {
   bottom: 25%;
-  right: 15%;
+  left: 15%;
 }
 .controllerRight {
   bottom: 15%;
-  right: 5%;
+  left: 25%;
 }
 .controllerDown {
   bottom: 5%;
-  right: 15%;
+  left: 15%;
 }
 .controllerLeft {
   bottom: 15%;
-  right: 25%;
+  left: 5%;
+}
+.controllerEnter {
+  bottom: 15%;
+  right: 15%;
 }
 
 .fade-in-out-image {
