--- a/styles/global.css
+++ b/styles/global.css
@@ -8,15 +8,27 @@
   --menu-selected-background: #7fc2ff;
 }
 
+body .amy-game {
+  visibility: hidden;
+}
+body .tails-game {
+  visibility: hidden;
+}
+body .knuckles-game {
+  visibility: hidden;
+}
+
 * {
   box-sizing: border-box;
 }
 body {
-  background: #333;
   padding: 0;
   margin: 0;
   overflow: hidden;
   font-family: "Ribeye", cursive;
+  height: 100vh;
+  display: flex;
+  background: #060ab2;
 }
 .how-to-play {
   position: absolute;
@@ -171,4 +183,10 @@ body {
   max-height: 100%;
 
   visibility: hidden;
+}
+
+.ending-text {
+  width: 100%;
+  text-align: center;
+  padding-top: 50px;
 }
