--- a/styles/sceneTransition.css
+++ b/styles/sceneTransition.css
@@ -8,6 +8,7 @@
   opacity: 0;
   animation: scene-transition-fade-in 1.2s forwards;
 }
+
 .EndSceneTransition {
   position: absolute;
   left: 0;
@@ -16,10 +17,15 @@
   bottom: 0;
   background: #fff;
   opacity: 0;
-  animation: scene-transition-fade-in 5s forwards;
+  animation: scene-transition-fade-in 4s forwards;
 }
+
 .SceneTransition.fade-out {
-  animation: scene-transition-fade-out 5s forwards;
+  animation: scene-transition-fade-out 1.2s forwards;
+}
+
+.EndSceneTransition.fade-out {
+  animation: scene-transition-fade-out 4s forwards;
 }
 
 @keyframes scene-transition-fade-in {
