--- a/styles/global.css
+++ b/styles/global.css
@@ -18,6 +18,7 @@ body .knuckles-game {
 * {
   box-sizing: border-box;
 }
+
 body {
   padding: 0;
   margin: 0;
@@ -27,6 +28,7 @@ body {
   display: flex;
   background: #060ab2;
 }
+
 .how-to-play {
   position: absolute;
   left: 0;
@@ -46,6 +48,7 @@ body {
   width: 100%;
   max-width: 1400px;
   max-height: 100%;
+  overflow: hidden;
 }
 
 .game-container canvas {
