--- a/styles/memory.css
+++ b/styles/memory.css
@@ -8,8 +8,12 @@
   max-width: 1400px;
   max-height: 100%;
 
-  width: 640px;
-  height: 640px;
+  /* width: 640px; */
+  /* height: 640px; */
+  width: 100%;
+  height: 100%;
+  /* padding-left: 380px; */
+  /* padding-right: 380px; */
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -20,14 +24,19 @@
 }
 
 .memory-card {
-  width: calc(25% - 10px);
-  height: calc(33.333% - 10px);
-  margin: 5px;
+  width: calc(25% - 20px);
+  height: calc(33.333% - 20px);
+  margin: 10px;
   position: relative;
   transform: scale(1);
   transform-style: preserve-3d;
   transition: transform 0.5s;
+  border-radius: 20px;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  background: #1c7ccc;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
 .memory-card:active {
@@ -45,15 +54,18 @@
   height: 100%;
   padding: 20px;
   position: absolute;
-  border-radius: 5px;
-  background: #1c7ccc;
+  border-radius: 20px;
   backface-visibility: hidden;
 }
 
 .back-face {
-  height: auto;
+  /* height: auto; */
+  width: auto;
   padding-top: 57px;
   padding-bottom: 57px;
+  display: flex;
+  justify-content: center;
+  max-height: fit-content;
 }
 
 .blue-background {
