--- a/styles/tamagotchi.css
+++ b/styles/tamagotchi.css
@@ -16,7 +16,7 @@ div {
   color: #dffdcf;
 } */
 
-.amy-game {
+.tamagotchi-game {
   position: absolute;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -25,8 +25,14 @@ div {
   width: 100%;
   max-width: 1400px;
   max-height: 100%;
-
-  visibility: hidden;
+  height: 100%;
+  background-color: #060ab2;
+  z-index: 5;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  /* padding: 200px; */
+  /* margin: 20px; */
 }
 
 .home {
