--- a/styles/global.css
+++ b/styles/global.css
@@ -37,6 +37,11 @@ body {
   text-align: center;
   font-size: 12px;
   color: #fff;
+  visibility: hidden;
+
+  @media (min-width: 1256px) {
+    visibility: visible;
+  }
 }
 
 .game-container {
@@ -57,7 +62,14 @@ body {
 }
 
 .treasure {
-  /* transform: scale(0.3) translateY(50%); */
+  position: absolute;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  max-width: 1400px;
+  max-height: 100%;
 }
 
 .toggle {
@@ -67,7 +79,13 @@ body {
   color: black;
   font-size: 5px;
 
-  transform: scale(3);
+  transform: scale(2);
+
+  @media (min-width: 1256px) {
+    /* font-size: 3px; */
+
+    transform: scale(3);
+  }
 }
 
 .escMenu {
@@ -76,11 +94,13 @@ body {
   right: 6%;
   color: black;
   font-size: 5px;
-  transform: scale(3);
+  transform: scale(2);
 
-  /* @media (min-width: 768px) {
-    width: auto;
-  } */
+  @media (min-width: 1256px) {
+    /* font-size: 3px; */
+
+    transform: scale(3);
+  }
 }
 
 .fullscreenButton {
@@ -89,7 +109,13 @@ body {
   right: 6%;
   color: black;
   font-size: 5px;
-  transform: scale(3);
+  transform: scale(2);
+
+  @media (min-width: 1256px) {
+    /* font-size: 3px; */
+
+    transform: scale(3);
+  }
 }
 
 /* a:fullscreen {
@@ -170,15 +196,4 @@ body {
     opacity: 0;
     bottom: 30px;
   }
-}
-
-.knuckles-game {
-  position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  max-width: 1400px;
-  max-height: 100%;
 }
