--- a/styles/menus.css
+++ b/styles/menus.css
@@ -18,10 +18,14 @@
 }
 
 .overlayMenu h2 {
-  font-size: 30px;
+  font-size: 20px;
   color: var(--menu-font-color);
   margin: 0;
   padding: 2px 0;
   text-align: center;
   border-bottom: 1px solid #a48465;
+
+  @media (min-width: 1256px) {
+    font-size: 30px;
+  }
 }
